tests/machine/x/rust/len_string.rs
fn main() {
    println!("{:?}", len("mochi"));
}
